tests/sksl/errors/AssignmentTypeMismatch.dsl.glsl
### Compilation failed:

error: expected 'int', but found 'float'

error: type mismatch: '=' cannot operate on 'int', 'float'

error: type mismatch: '*=' cannot operate on 'int3', 'float'

error: expected '(' to begin function call

error: expected '(' to begin constructor invocation

5 errors
